fix: overflow country list overflow scroll.

--- a/src/components/CountryList.module.css
+++ b/src/components/CountryList.module.css
@@ -2,13 +2,8 @@
   width: 100%;
   height: 65vh;
   list-style: none;
-  @media (min-width: 975px) {
-    overflow-y: scroll;
-  }
-  @media (max-width: 975px) {
-    overflow-y: hidden;
-  }
   overflow-x: hidden;
+  overflow-y: auto;
 
   display: grid;
   grid-template-columns: 1fr 1fr;
